passed all checks!

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,4 +13,6 @@ License: MIT + file LICENSE
 BugReports: https://github.com/katiejolly/advicegiveR/issues
 Imports:
   magick,
-  jsonlite
+  jsonlite,
+  stringr,
+  extrafont
